k8s/spring-petclinic/_common/private-ingress/overlays/prod/PatchIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": {"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/group.name: play-internal-prod
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/load-balancer-name: play-internal-prod
    alb.ingress.kubernetes.io/target-group-attributes: 'deregistration_delay.timeout_seconds=60'
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app.kubernetes.io/name: play
  name: play
spec:
  rules:
    - host: int-spring-petclinic.play.kurly.services
      http:
        paths:
          - path: /
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
            pathType: Prefix
          - path: /
            backend:
              service:
                name: spring-petclinic
                port:
                  number: 80
            pathType: Prefix
